--- a/src/components/ImageToFullScreen/ImageToFullScreen.module.scss
+++ b/src/components/ImageToFullScreen/ImageToFullScreen.module.scss
@@ -72,18 +72,18 @@
     }
 }
 
-
 }
 
 @media (max-width: 800px) {
     .image {
-        width: 100%!important;
-
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         img {
             width: 100%;
-            
+            height: fit-content;
         }
     }
-
-  
 }
