--- a/src/components/ImageToFullScreen/ImageToFullScreen.module.scss
+++ b/src/components/ImageToFullScreen/ImageToFullScreen.module.scss
@@ -83,7 +83,7 @@
         align-items: center;
         img {
             width: 100%;
-            height: fit-content;
+            object-fit: contain;
         }
     }
 }
