added 5px bottom padding to post description

--- a/src/components/Posts/PostCard/PostCard.scss
+++ b/src/components/Posts/PostCard/PostCard.scss
@@ -91,8 +91,8 @@
             display: none;
         }
 
-        p {
-            padding: 0 0 10px 5px;
+        .desc {
+            padding-bottom: 5px;
         }
 
         .at-sign {
