--- a/src/pages/Post/Post.module.scss
+++ b/src/pages/Post/Post.module.scss
@@ -148,6 +148,7 @@
             .desc {
                 white-space: pre-wrap;
                 word-break: break-all;
+                padding-bottom: 5px;
                 .at-sign {
                     color: rgba(129, 144, 187, 0.808);
                 }
