--- a/src/components/SecondModal/SecondModal.module.scss
+++ b/src/components/SecondModal/SecondModal.module.scss
@@ -79,7 +79,7 @@
           position: relative;
         }
 
-        .avatarPlaceHolder {
+        .avatarPlaceholder {
           width: 30px;
           height: 30px;
           display: flex;
@@ -89,7 +89,7 @@
           background-color: #22222280;
 
           &:first-child {
-            font-size: 1.7rem;
+            font-size: 1.3rem;
           }
         }
 
