--- a/src/components/Leftbar/Leftbar.module.scss
+++ b/src/components/Leftbar/Leftbar.module.scss
@@ -73,14 +73,14 @@
                     border-radius: 50%;
                     object-fit: cover;
                 }
-                .imgPlaceHolder {
+                .avatarPlaceholder {
                     width: 30px;
                     height: 30px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     border-radius: 50%;
-                    background-color: #22222280;
+                    background-color: $btnColorDark;
 
                     &:first-child {
                         font-size: 1.1rem;
