--- a/src/components/Posts/PostCard/PostCard.scss
+++ b/src/components/Posts/PostCard/PostCard.scss
@@ -41,30 +41,18 @@
                     
                 }
 
-                .img-placeholder {
+                .avatarPlaceholder {
                     width: 40px;
                     height: 40px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     border-radius: 50%;
+                    background-color: $btnColorDark;
 
                     &:first-child {
                         font-size: 1.3rem;
                     }
-                }
-
-                &::after {
-                    content: '';
-                    position: absolute;
-                    width: 43px;
-                    height: 43px;
-                    top: 0;
-                    left: 0;
-                    z-index: -1;
-                    transform: translate(-1.5px, -2px);
-                    border-radius: 50%;
-                    background-color: $btnColorDark;                
                 }
             }  
         }
