--- a/src/pages/Post/Post.module.scss
+++ b/src/pages/Post/Post.module.scss
@@ -77,34 +77,21 @@
                     
                 }
     
-                .imgPlaceholder {
+                .avatarPlaceholder {
                     width: 40px;
                     height: 40px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     border-radius: 50%;
-                    background-color: #22222280;
+                    background-color: $btnColorDark;    
     
                     &:first-child {
                         font-size: 1.3rem;
                     }
                 }
-    
-                &::after {
-                    content: '';
-                    position: absolute;
-                    width: 43px;
-                    height: 43px;
-                    top: 0;
-                    left: 0;
-                    z-index: -1;
-                    transform: translate(-1.5px, -2px);
-                    border-radius: 50%;
-                    background: linear-gradient(#1e1e1b, #575b56, #7c7e7a);
-                }
             }  
-            }
+        }
 
             .infoRight{
                 display: flex;
